06.2-Gateway API/3.url-rewrite/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: url-rewrite
  labels:
    app: paytam
