06.2-Gateway API/3.url-rewrite/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paytam
  namespace: url-rewrite
  labels:
    app: paytam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: paytam
  template:
    metadata:
      labels:
        app: paytam
    spec:
      containers:
        - name: paytam
          image: yaswanth111/paytam:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
