06.2-Gateway API/3.url-rewrite/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: paytam-svc
  namespace: url-rewrite
  labels:
    app: paytam
spec:
  type: ClusterIP
  selector:
    app: paytam
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
